@@ -1,5 +1,4 @@
 <?php
-
 $indexSetup = array(
     'number_of_shards' => 5,
     'number_of_replicas' => 1,
